add fp16 support exact search
Signed-off-by: Manasvi Goyal <mg.manasvi@gmail.com>